--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,7 @@
             ],
             "scripts": [
               "src/assets/vendor/jquery/jquery.min.js",
-              "src/assets/vendor/bootstrap/js/bootstrap.min.js",
+              "src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js",
               "src/assets/vendor/jquery.easing/jquery.easing.min.js",
               "src/assets/vendor/venobox/venobox.min.js",
               "src/assets/vendor/waypoints/jquery.waypoints.min.js",
