--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,11 +4,17 @@
     "outDir": "./out-tsc/app",
     "types": []
   },
+  "files": [
+    "src/main.ts",
+    "src/polyfills.ts"
+  ],
   "include": [
     "src/**/*.ts"
   ],
   "exclude": [
     "src/test.ts",
-    "src/**/*.spec.ts"
+    "src/**/*.spec.ts",
+    "src/environments/environment.prod.ts",
+    "src/app/shared/directives/index.ts"
   ]
 }
